src/test/deca/context/invalid/decaObjet/instanceof/00invalidVariable.deca
// Description:
//    instanceof avec un nom de variable invalide à gauche
//
// Resultats:
//    00invalidVariable.deca:13:4:
//
// Historique:
//    cree le 16/06/2022

class A {}

{
    A instanceof A;
}